# package-releases-job

./: .aicoe-ci.yaml  .coafile  .gitignore  .pre-commit-config.yaml  .prow.yaml  .thoth.yaml  .thothTemplate.yaml  .zuul.yaml  CHANGELOG.md  Jenkinsfile  OWNERS  Pipfile  README.md  README.rst  app.py  app.sh  dumper.py  mypy.ini  producer.py  pull_updates.py  pyproject.toml  version.py
.s2i/: environment
config/: thoth.yaml
openshift/: buildConfig-template.yaml  cronJob-template.yaml  imageStream-template.yaml  template.yaml
thoth/package_release_job/: __init__.py
