[project]
name = "package-releases-job"
description = "Check packages updates on Python package indexes"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version", "dependencies"]

[project.scripts]
package-releases-job = "producer:main"

[build-system]
requires = ["setuptools", "wheel", "setuptools-pipfile"]

[tool.setuptools.dynamic]
version = {attr = "producer.__version__"}

[tool.setuptools-pipfile]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
